# web-api

./: README.md
endpoint/: README.rst  __manifest__.py
endpoint/controllers/: main.py
endpoint/i18n/: endpoint.pot
endpoint/models/: endpoint_mixin.py
endpoint/readme/: CONFIGURE.md  DESCRIPTION.md  ROADMAP.md
endpoint/static/description/: index.html
endpoint/tests/: test_endpoint_controller.py
endpoint/views/: endpoint_view.xml
endpoint_cache/i18n/: it.po
endpoint_jsonifier/i18n/: it.po
endpoint_route_handler/: README.rst  __manifest__.py
endpoint_route_handler/i18n/: endpoint_route_handler.pot  it.po
endpoint_route_handler/static/description/: index.html
setup/_metapackage/: pyproject.toml
webservice/i18n/: it.po
