[project]
name = "odoo-addons-oca-web-api"
version = "17.0.20241204.0"
dependencies = [
    "odoo-addon-endpoint>=17.0dev,<17.1dev",
    "odoo-addon-endpoint_route_handler>=17.0dev,<17.1dev",
    "odoo-addon-webservice>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
